Sun May 23 20:02:32 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	Fix & test case supplied by Jeffrey Lee <me@phlamethrower.co.uk>:
	* gcccompat/galloca.c (__gcc_alloca_restore): Don't restore chunk
	belonging to parent frame.  Solves bug 205.
	* test/alloca: Added test case.

Sun May  2 00:58:38 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* common/riscosify.c: Fix the __TARGET_SOLOADER__ case when build
	option __UNIX_PARANOID is set.

Thu May 13 16:20:41 CEST 2010  John Tytgat  <John.Tytgat@aaug.net>

	* recipe/files/gcc/libunixlib/crt/crt0-scl.s(_start): Merge into __main
	eliminating the latter symbol.
	Removed unnecessary .text lines.
	(c_run): Renamed to __c_run.
	( ___main): Renamed to __main; Register _fini with atexit() after the
	call to _init instead of before so when we have an exit called in
	_init, the _fini is not called.
	(_start,__c_run): Add size info.
	(__gccmain): Added for the module case (being the the equivalent of
	__main for absolute files.

Sun May  9 17:02:23 2010   Lee Noar  <leenoar@sky.com>

	* crt/crt0-scl.s: Fix .type parameter to match function it
	belongs to.

	Fixes for C++ exception handling in SCL (not module code):

	* gcccompat/_b_return.s: Add separate implementation of
	__builtin_return_address for SCL. This differs from the UnixLib
	version in that an SCL stack chunk does not contain a return
	address for when a stack chunk is freed. Instead it creates a
	dummy stack frame to store it.
	* gcccompat/_b_frame.s: Add separate implementation of
	__builtin_frame_address for SCL to help simplify the code.
	* gcccompat/_eh_support.s(__ehs_return_address): The SCL presents
	a problem for __ehs_return_address because it can't know what the
	address of the stack chunk freeing routine is as we do for
	__free_stack_chunk in UnixLib. It needs to be able to test for it
	so that it can substitute the real return address. To overcome this
	a new function, __ehs_init, is called to determine the start and end